--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@300&display=swap');
 :root{
     --color1: #ffffff;
     --color2: #000000;
@@ -27,9 +28,11 @@
 }
 .top-content{
     font-size: 1.5em;
+    font-family: 'Roboto', sans-serif;
 }
 .mid-content{
     font-size: 3em;
+    font-family: 'Roboto', sans-serif;
 }
 .bottom-content{
     font-size: 2em;
@@ -45,6 +48,7 @@
 .main_button a{
     text-decoration: none;
     color: var(--color2) ;
+    font-family: 'Roboto', sans-serif;
 }
 #about{
     background-color: rgb(0, 225, 255);
