--- a/about.css
+++ b/about.css
@@ -132,13 +132,14 @@
 .cert{
     width: 18em;
     height: 13em;
-    background-color: rgb(0, 27, 0);
+    background-color: var(--color2);
     margin: 0em 0.2em 0em 0.2em;
     padding: 0.7em 0.4em 0em 0.4em;
     border-radius: 20px;
 }
 .cert:hover{
-    background-color: rgb(37, 65, 0);
+    background-color: var(--color1);
+    color: var(--color2);
 }
 .cert_image{
     max-width: 10em;
@@ -150,6 +151,7 @@
     margin-top: 0.4em;
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
+    font-weight: 600;
 }
 .footer{
     height: 7vh;
