--- a/second.css
+++ b/second.css
@@ -120,18 +120,20 @@
     height: 40vh;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    margin-top: 2em;
+    /* justify-content: center; */
+    margin: 2em 0em 0em 0em;
     overflow-x: scroll;
-    -ms-overflow-style: none;  /* IE and Edge */
-      scrollbar-width: none;  /* Firefox */
+    position: relative;
+    /* white-space:nowrap; */
+    -ms-overflow-style: none;  
+      scrollbar-width: none;  
 }
 .cert_body::-webkit-scrollbar{
     display: none;
 }
 .cert{
     width: 18em;
-    height: 13em;
+    height: 14em;
     background-color: var(--color2);
     margin: 0em 0.2em 0em 0.2em;
     padding: 0.7em 0.4em 0em 0.4em;
