--- a/second.css
+++ b/second.css
@@ -8,10 +8,25 @@
     margin: 0%;
     padding: 0%;
 }
+.progress-container {
+    position: fixed;
+    top: 0%;
+    width: 100%;
+    height: 8px;
+    background: #ccc;
+  }
+  
+.progress-bar {
+    height: 8px;
+    background: #ff0000;
+    width: 0%;
+  }
+
 .outer{
-    height: 100vh;
-    width: 100vw;
+    height: auto;
+    width: auto;
     overflow-x: hidden;
+    overflow-y: hidden;
     color: var(--color1);
 }
 .container1{
@@ -26,8 +41,8 @@
     justify-content: center;
 }
 .photo{
-    height: 25vh;
-    width: 25vh;
+    height: 9em;
+    width: 9em;
     margin-right: 2em;
     border: 0.5em solid var(--color1)
 }
