--- a/second.css
+++ b/second.css
@@ -111,8 +111,46 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-/* certificate */
+/* github */
 .container3{
+    height: auto;
+    width: 100vw;
+    background-color: var(--color2);
+    background-image: linear-gradient(315deg, #000000 30%, #282e30 64%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.git_cont{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+    margin: 0em 3em 2em 3em;
+}
+.box{
+    height: 9em;
+    width: 40vw;
+    border: 0.2em solid var(--color1);
+    margin: 0em 2em 0.9em 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.caption{
+    font-size: 1.2em;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+}
+.value{
+    font-size: 1.9em;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 800;
+}
+/* certificate */
+.container4{
     height: 30em;
     width: 100vw;
     background-color: var(--color2);
@@ -208,5 +246,8 @@
     }
     .photo_content{
         margin:0em 4em 0em 4em;
+    }
+    .box{
+        width: 70vw;
     }
 }
